MAIN: fix overflow display issue in modal

--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -18,7 +18,7 @@
         border-radius: 11px;
         max-height: 100vh;
         max-width: 100vw;
-        overflow-y: scroll;
+        overflow-y: hidden;
         overflow-x: hidden;
 
         //drop shadow
